Fixed flickering renders, added pinning animation, added wip context menu

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -164,6 +164,22 @@ h4.sort-h4 {
     position: relative;
     display: table;
 }
+.ntg-context-menu {
+    position: absolute;
+    background-color: #FFFFFF;
+    overflow: overlay;
+    -webkit-overflow-scrolling: touch;
+    border-radius: 3px;
+    width: 200px;
+    height: 300px;
+    -webkit-box-shadow:2px 2px 15px -2px rgba(0,0,0,0.75);
+}
+.ntg-context {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
 button.ntg-btn {
     width: 100%;
     height: 32px;
@@ -185,6 +201,7 @@ button.ntg-btn {
     -webkit-user-select: none;
     border-radius: 4px;
     overflow: hidden;
+    outline: none;
 }
 button.ntg-top-btn {
     position: relative;
@@ -211,6 +228,7 @@ button.ntg-top-btn {
     -webkit-user-select: none;
     border-radius: 4px;
     top: 1px;
+    outline: none;
 }
 
 button.ntg-apply-btn {
@@ -239,6 +257,7 @@ button.ntg-apply-btn {
     -webkit-user-select: none;
     border-radius: 4px;
     top: 1px;
+    outline: none;
 }
 button.ntg-setting-btn {
     width: 200px;
@@ -264,6 +283,7 @@ button.ntg-setting-btn {
     overflow: hidden;
     position: fixed;
     top: 780px;
+    outline: none;
 }
 button.ntg-impexp-btn {
     width: 150px;
@@ -289,6 +309,7 @@ button.ntg-impexp-btn {
     overflow: hidden;
     position: fixed;
     top: 780px;
+    outline: none;
 }
 button.ntg-session-btn {
     width: 40%;
@@ -312,5 +333,5 @@ button.ntg-session-btn {
     border-radius: 4px;
     overflow: hidden;
     float: right;
-
+    outline: none;
 }
